# todays

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py  urls.py
app/api/views/: theme.py  user.py
app/core/: conf.py
app/core/auth/: exceptions.py  schemas.py  shemas.py  utils.py
app/crud/: __init__.py  base.py  crud_theme.py  exceptions.py  mixins.py
app/db/migrations/: env.py
app/db/migrations/versions/: 24eedffa91e0_create_permission_model.py  519a0e4abb50_add_created_at_field_for_news_model_add_.py  66042855e652_model_theme_field_name_unique_true.py  78f88cb82978_make_original_link_unique_add_created_at.py  a97d6cb24077_model_theme_field_name_unique.py  b2e368a82287_init_migration.py  c593eaa82e4b_increase_originl_link_length.py  f435c6e54cad_remove_uuid_from_user_add_permissions.py
app/db/models/: news.py  session.py  utils.py
app/parsers/: parser.py  services.py
app/schemas/: news.py
app/tests/: conftest.py  factories.py  utils.py
app/tests/api/: test_theme.py  test_user.py
